<resources>
    <string name="app_name">OBDII</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    //login
    <string name="phoneNum">手机号码</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="unregister">马上注册？</string>

    //register
    <string name="register">注册</string>
    <string name="repect_password">重复密码</string>
    <string name="repect_password_error">密码不一致</string>

    <string name="list_item_left_button">Left</string>
    <string name="list_item_right_button">Right</string>

    //addrecord
    <string name="add_record">汽车记录</string>
    <string name="time">时间(*)</string>
    <string name="event_type">事件类型</string>
    <string name="maintain">保养</string>
    <string name="repair">维修</string>
    <string name="insurance">保险</string>
    <string name="other">其他</string>
    <string name="cost">费用</string>
    <string name="current_mileage">目前车辆里程</string>
    <string name="kilometre">公里</string>
    <string name="yuan">元</string>
    <string name="save">保存</string>

    //bluetooth
    <string name="sel_devices">蓝牙设备选择</string>
    <string name="help_title">帮助</string>
    <string name="connected_status">连接状态</string>
    <string name="response_message">反馈信息</string>
    <string name="supported_pids">支持PIDs[00-20],[0-不支持][1-支持]</string>
    <string name="input_command">输入OBD2命令</string>
    <string name="send_command">发送</string>
    <string name="send_timer_command">定时发送</string>
    <string name="timer_cancel">取消定时</string>
    <string name="select_device">选择设备</string>
    <string name="disconnect_device">断开设备</string>
    <string name="title_paired_devices">配对设备</string>
    <string name="title_other_devices">新设备</string>
    <string name="scan_device_btn">扫描新设备</string>
    <string name="stop_scan_btn">停止扫描</string>
    <string name="menu_settings">设置</string>
    <string name="menu_quit">退出</string>
    <string name="menu_help">帮助</string>
    <string name="menu_res_ok">回复OK</string>
    <string name="menu_res_normal">回复Normal</string>
    <string name="menu_res_error">回复Error</string>
    <string name="bt_not_available">蓝牙设备不可用</string>
    <string name="please_input_cmd">请输入有效命令</string>
    <string name="device_connecting">蓝牙设备连接中...</string>
    <string name="no_device_found">未找到蓝牙设备</string>
    <string name="device_scanning">扫描设备</string>
    <string name="none_paired">未配对</string>
    <string name="obd_protocol">OBDII通讯协议</string>
    <string name="obd_commands">OBDII命令</string>
    <string name="obd_cmds_cmd">命令</string>
    <string name="obd_cmds_detail">说明</string>
    <string name="obd_cmds_unit">单位</string>
    <string name="obd_cmds_return">返回字节</string>
    <string name="obd_cmds_formula">公式</string>

    <string name="trouble_code">查看故障码</string>


    <string name="startlocation">开启定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="error_code_desc">错误码说明</string>
    <string name="qa_title">常见问题</string>
    <string name="hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="device_sensor_desc">仅用设备定位模式下，只使用用户的GPS进行定位。这个模式下，由于GPS芯片锁定需要时间，首次定位速度会需要一定的时间</string>
    <string name="error_code_detail"> 61 ： GPS定位结果\n
		62 ： 扫描整合定位依据失败。此时定位结果无效。\n
		63 ： 网络异常，没有成功向服务器发起请求。此时定位结果无效。\n
		65 ： 定位缓存的结果。\n
		66 ： 离线定位结果。通过requestOfflineLocaiton调用时对应的返回结果\n
		67 ： 离线定位失败。通过requestOfflineLocaiton调用时对应的返回结果\n
		68 ： 网络连接失败时，查找本地离线定位时对应的返回结果\n
		161： 表示网络定位结果\n
		162~167： 服务端定位失败\n
		502：key参数错误\n
		505：key不存在或者非法\n
		601：key服务被开发者自己禁用\n
		602：key mcode不匹配\n
		501～700：key验证失败\n</string>
    <string name="qa_callback">问题反馈方法</string>
    <string name="qa_callback_mail">mapapi@baidu.com</string>

    
    
    //add car message
    <string name="car_type">汽车型号</string>
    <string name="buy_time">购买日期</string>
    <string name="buy_insurance">已购保险</string>
    <string name="detail">详细信息</string>
    <string name="remark">备    注</string>
    
</resources>
