<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


            <EditText
                android:hint="@string/phoneNum"
                android:id="@+id/et_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <EditText
                android:hint="@string/password"
                android:layout_below="@+id/et_userName"
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        <Button
            android:textColor="@color/white"
            android:layout_below="@id/et_password"
            android:layout_margin="20dp"
            android:background="@drawable/shape_button"
            android:text="@string/login"
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/unregisterText"
            android:textSize="7pt"
            android:layout_alignRight="@+id/btn_login"
            android:layout_below="@+id/btn_login"
            android:text="@string/unregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>


</LinearLayout>
